# geospatial-chat-tf

./: Procfile  README.md  presentation.md  pyproject.toml  railway.toml  requirements.txt
auq_data_engine/: README.md
auq_database/: README.md
auq_frontend/: README.md
auq_frontend/components/: api-test.tsx  chat-sidebar.tsx
auq_frontend/hooks/: useNLPAgent.ts
auq_nlp/: README.md  api.py  main.py  railway.toml  requirements.txt  run.py  setup.py  test_questions.txt
auq_nlp/config/prompts/: enhanced_prompt.txt
auq_nlp/docs/: LANGCHAIN_ANALYSIS.md  improvements.md
auq_nlp/prompt/: custom_prompt.txt
auq_nlp/src/auq_nlp/: __init__.py
auq_nlp/src/auq_nlp/agents/: __init__.py  langchain_agent.py  query_processor.py
auq_nlp/src/auq_nlp/api/: __init__.py  main.py
auq_nlp/src/auq_nlp/core/: __init__.py  cache.py  config.py  validator.py
auq_nlp/src/auq_nlp/utils/: __init__.py  logging.py
auq_nlp/tests/: __init__.py  test_improvements.py
auq_nlp/zz_deprecated/: cache_manager.py  result_validator.py
auq_nlp/zz_deprecated/scripts/: legacy_api.py
shared/: README.md
shared/common_lib/: README.md
shared/docs/: commit_template.md  frontend_standards.md  python_scripts_guidelines.md  supabase_integration.md
shared/scripts/data/: git_history.md
